# quizhero-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  gunicorn_config.py  heroku.yml  local.env  pyproject.toml
.github/workflows/: production.yml
quizhero-api/: manage.py
quizhero-api/apps/core/: admin.py  serializers.py  urls.py  views.py
quizhero-api/apps/core/migrations/: 0001_initial.py
quizhero-api/apps/quizzes/: admin.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
quizhero-api/apps/quizzes/migrations/: 0001_initial.py
quizhero-api/quizhero_api/: settings.py  urls.py  wsgi.py
quizhero-api/tests/: conftest.py  test_quizhero_api.py
quizhero-api/tests/quizzes/: factories.py  test_models.py
